--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>과제 사이트</title>
   </head>
-  <body>
-    test
-  </body>
+  <body></body>
 </html>
